<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:onClick="startBluetooth"
        android:text="@string/Start"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="searchBluetooth"
        android:text="@string/Search"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="Disconnect"
        android:text="@string/Disconnect"
        android:textAllCaps="false" />

    <Switch
        android:id="@+id/led_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:paddingStart="12dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingEnd="12dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:switchPadding="12dp"
        android:text="@string/RedLED" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="177dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="137dp"
            android:layout_marginBottom="104dp"
            android:text="Color Temperature: " />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="134dp"
            android:baselineAligned="false" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_marginBottom="-86dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Switch
            android:id="@+id/capsense_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="194dp"
            android:enabled="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:switchPadding="12dp"
            android:text="@string/Notify" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="221dp"
            android:baselineAligned="false" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="111dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="105dp"
            android:layout_marginBottom="196dp"
            android:text="Brightness: " />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tcnjpng" />

</LinearLayout>